# pybioimage

./: .gitignore  LICENSE  README.md  pyproject.toml
pybioimage/: __init__.py  utils.py
pybioimage/aggregation/: __init__.py  analyzer.py  image.py
pybioimage/enrichment/: __init__.py  analyzer.py
pybioimage/frap/: __init__.py  analyzer.py
