[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybioimage"
description = "A small package for custom image analysis tasks."
version = "2025.4.7.1"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "scikit-image>=0.22.0",
    "opencv-python>=4.6.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "pykuwahara>=0.3.2"
]
